...
          transform: [{ translateY: slideAnim }]
        }
      ]}
    >
      <View style={styles.dropdownWrapper}>
        <AutoCompleteDropdown
          testID="originNavigationDropdown"
          ref={topDropDownRef}
          locked={loadingRoutes}
          searchSuggestions={searchSuggestions}
          setSearchSuggestions={setSearchSuggestions}
          buildingData={buildingList} 
          onSelect={(selected) => {
...
        size={30}
        color="black"
        style={styles.modeIcon}
      />
      <View style={styles.dropdownWrapper}>
      <AutoCompleteDropdown
        testID="destinationNavigationDropdown"
        ref={bottomDropDownRef} // add the ref here
        locked={loadingRoutes}
        searchSuggestions={searchSuggestions}
        setSearchSuggestions={setSearchSuggestions} 
        currentVal={destination}
        buildingData={buildingList}
...
