...
                                  <Text style={styles.completedText}>Completed</Text>
                                ) : (
                                  <View style={styles.buttonRow}>
                                    <TouchableOpacity
                                      style={styles.directionsButton}
                                      onPress={() => handleDirections(item)}
                                      testID={`directions-button-task`}
                                    >
                                      <Text style={{ color: 'white', fontSize: 16 }}>Directions</Text>
                                    </TouchableOpacity>
                                    <TouchableOpacity
                                      style={styles.doneButton}
                                      onPress={() => markDone(itemId)}
...
                      style={[
                        styles.planBuilderButton,
                        isAddEditPlanDisabled && styles.disabledButton
                      ]}
                      disabled={isAddEditPlanDisabled}
                      onPress={openPlanBuilder}
                      testID='plan-builder-button'
                    >
                      <Text style={{ color: 'white', fontSize: 16 }}>Add/Edit Plan</Text>
                    </TouchableOpacity>
                    <TouchableOpacity
                        style={[
                          styles.deletePlanButton,
...
