...
          <TextInput
            style={styles.planNameInput}
            placeholder="New Plan 1"
            placeholderTextColor="#b2b3b8"
            value={tempPlanName}
            onChangeText={setTempPlanName}
            testID='plan-name-input'
          />
          <View style={styles.underlineBox} />

           {tempIsStartLocationButton === false ? (
            <>
            <View style={styles.buttonRow}>
              <TouchableOpacity
                 style={{...styles.actionButton, backgroundColor: tempIsStartLocationSet ? '#2c2c38' : '#122F92'}}
                 onPress={() => setTempIsStartLocationButton(true)}
                 disabled={tempIsStartLocationSet}
                 testID='set-start-location-button'>
                <Text style={{ color: 'white', fontSize: 15 }}>Set Start Location</Text>
              </TouchableOpacity>
              <TouchableOpacity style={styles.actionButton} onPress={handleAddNextClass} testID='add-next-class-button-location-view'>
                <Text style={{ color: 'white', fontSize: 15}}>Add Next Class</Text>
              </TouchableOpacity>
            </View>

            <View style={styles.underlineBox} />
              <View style={styles.taskHeaderRow}>
                <Text style={styles.addTaskTitle}>Add Task</Text>
                <TouchableOpacity style={styles.viewTasksButton} onPress={() => openTaskView(tempTasks)} testID='view-current-tasks-button-location-view'>
                  <Text style={{ color: 'white', fontSize: 15 }}>View Current Tasks</Text>
                </TouchableOpacity>
              </View>

            <View style={styles.addTaskContainer}>
              <Text style={styles.addTaskHeader}>Task Name</Text>
              <TextInput
                style={styles.taskInput}
                placeholder="Enter task name..."
                placeholderTextColor="#b2b3b8"
                value={tempTaskName}
                onChangeText={setTempTaskName}
                testID='task-name-input'
              />
              <Text style={styles.addTaskHeader}>Location</Text>
              <View style={{ alignSelf: 'flex-start', marginLeft: -4 , marginBottom: 12, marginTop: 4}}>
                <AutoCompleteDropdown
                  ref={locationDropdownRef}
                  testID="locationSmartPlannerDropdown-start"
                  locked={false}
                  searchSuggestions={searchSuggestions}
                  setSearchSuggestions={setSearchSuggestions}
                  buildingData={buildingListPlusMore}
                  onSelect={(selected) => handleSearch(selected)}
                  darkTheme={true}
...
                    value={date}
                    mode="time"
                    is24Hour={false}
                    display="default"
                    onChange={onTimeChange}
                    themeVariant="dark"
                    testID='time-picker'
                  />
                ) : (
                <TouchableOpacity
                  onPress={() => {
                    DateTimePickerAndroid.open({
                      value: date,
...
              )}

              <TouchableOpacity
                style={[styles.addTaskButton, isAddTaskDisabled && styles.disabledButton]}
                onPress={addTask}
                disabled={isAddTaskDisabled}
                testID='save-add-task-button'
              >
                <Text style={{ color: 'white', fontSize: 17 }}>Add Task</Text>
              </TouchableOpacity>
            </View>
          </>
          ) : (
            <>
            <View style={styles.buttonRow}>
               <TouchableOpacity style={styles.actionButton} onPress={() => setTempIsStartLocationButton(false)} testID='add-task-mode-button'>
                <Text style={{ color: 'white', fontSize: 15 }}>Add Task</Text>
              </TouchableOpacity>
              <TouchableOpacity style={styles.actionButton} onPress={handleAddNextClass} testID='add-next-class-button-location-view'>
                <Text style={{ color: 'white', fontSize: 15}}>Add Next Class</Text>
              </TouchableOpacity>
            </View>

            <View style={styles.underlineBox} />
            <View style={styles.taskHeaderRow}>
              <Text style={styles.addTaskTitle}>Start Location</Text>
              <TouchableOpacity style={styles.viewTasksButton} onPress={() => openTaskView(tempTasks)} testID='view-current-tasks-button'>
                <Text style={{ color: 'white', fontSize: 15 }}>View Current Tasks</Text>
              </TouchableOpacity>
            </View>

            <View style={styles.addTaskContainer}>
              <Text style={styles.addTaskHeader}>Location</Text>
...
              </View>

              <TouchableOpacity
                style={[styles.addTaskButton, isOriginLocationDisabled && styles.disabledButton]}
                onPress={addOriginLocation}
                disabled={isOriginLocationDisabled}
                testID='add-start-location-button'
              >
                <Text style={{ color: 'white', fontSize: 17 }}>Add Start Location</Text>
              </TouchableOpacity>
            </View>
            </>)}


          <TouchableOpacity
              style={[styles.saveButton, isSaveDisabled && styles.disabledButton]}
              onPress={() => onSavePlan(tempPlanName, tempTasks, tempIsStartLocationSet)}
              disabled={isSaveDisabled}
              testID='save-plan-button'
            >
            <Text style={{ color: 'white' , fontSize: 17}}>Save</Text>
          </TouchableOpacity>
        </View>
      </View>
      </KeyboardAvoidingView>
...
