...
      <View style={styles.underlineBox} />
      <Text style={styles.noPlanText}>No current plan</Text>
      <View style={styles.underlineBox} />
      <TouchableOpacity
        style={styles.createPlanButton}
        onPress={handleCreatePlan}
        testID='create-plan-button'
      >
        <Text style={styles.createPlanButtonText}>Create New Plan</Text>
      </TouchableOpacity>
    </View>
  );

...
              ) : hasNextTask ? (
                <>
                  <View style={styles.taskHeaderRow}>
                    <Text style={styles.nextTaskLabel}>Next Task</Text>
                    <TouchableOpacity
                      style={styles.nextTaskDirectionsButton}
                      testID="get-directions-button-main-modal"
                      onPress={() => handleGetDirections(origin, destination)}
                    >
                      <Text style={{ color: 'white', fontSize: 15 }}>Get Directions</Text>
                    </TouchableOpacity>
                  </View>
                  <View style={styles.iconTextRow}>
                    <IconSymbol name={'info' as IconSymbolName} size={30} color="white" testID="info-icon-main-modal" />
                    <Text style={styles.taskItemSubText}>{generatedPlan[nextIncompleteTaskIndex].taskName}</Text>
                  </View>
                  <View style={styles.iconTextRow}>
                    <IconSymbol name={'location' as IconSymbolName} size={30} color="white" testID="location-icon-main-modal" />
                    <Text style={styles.taskItemSubText}>{generatedPlan[nextIncompleteTaskIndex].taskLocation}</Text>
                  </View>
                  <View style={styles.iconTextRow}>
                    <IconSymbol name={'clock' as IconSymbolName} size={30} color="white" testID="clock-icon-main-modal" />
                    {!generatedPlan[nextIncompleteTaskIndex].taskTime ? (
                      <Text style={styles.taskItemSubText}>No time specified</Text>
                    ) : (
                      <Text style={styles.taskItemSubText}>{generatedPlan[nextIncompleteTaskIndex].taskTime}</Text>
                    )}
                  </View>
...
