appId: com.anonymous.MightyMammoths
---
- assertVisible:
    id: "originNavigationDropdown"
- assertVisible:
    id: "more-vert"
- assertVisible:
    id: "swap-vert"
- assertVisible:
    id: "destinationNavigationDropdown"
- tapOn:
    id: "originNavigationDropdown"
- tapOn: "Your Location"
- tapOn:
    id: "destinationNavigationDropdown"
- tapOn:
    id: "destinationNavigationDropdown"