appId: com.anonymous.MightyMammoths
---
- tapOn:
    id: "originNavigationDropdown"
    
- inputText: "EV"

- tapOn:
    id: "destinationNavigationDropdown"

- inputText: "AD"

- tapOn:
    id: "transitIcon"

- assertVisible:
    id: "startButton"

- assertVisible:
    id: "timeInformation"

- assertVisible:
    id: "distanceInformation"

- tapOn:
    id: "startButton"
